@@ -323,6 +323,7 @@ G_GNUC_PRINTF
 G_GNUC_SCANF
 G_GNUC_FORMAT
 G_GNUC_NULL_TERMINATED
+G_GNUC_WARN_UNUSED_RESULT
 G_GNUC_FUNCTION
 G_GNUC_PRETTY_FUNCTION
 G_GNUC_NO_INSTRUMENT
